This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Leaks xml.etree.ElementTree.Element.__setsate__()
Type: resource usage Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: eli.bendersky, miss-islington, scoder, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-10-17 08:46 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9924 merged serhiy.storchaka, 2018-10-17 08:57
PR 9942 merged miss-islington, 2018-10-18 06:50
PR 9943 merged miss-islington, 2018-10-18 06:50
Messages (4)
msg327873 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-17 08:46
When call the __setstate__() method of xml.etree.ElementTree.Element in the C implementation for already initialized element it leaks old children.
msg327937 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-18 06:49
New changeset 6f906b3d727d6b341abd5ad9c0652bbcbd5eb024 by Serhiy Storchaka in branch 'master':
bpo-35008: Fix possible leaks in Element.__setstate__(). (GH-9924)
https://github.com/python/cpython/commit/6f906b3d727d6b341abd5ad9c0652bbcbd5eb024
msg327941 - (view) Author: miss-islington (miss-islington) Date: 2018-10-18 07:16
New changeset bcbefe23fe2eb616a03c22764ba4ea79e12e3e28 by Miss Islington (bot) in branch '3.6':
bpo-35008: Fix possible leaks in Element.__setstate__(). (GH-9924)
https://github.com/python/cpython/commit/bcbefe23fe2eb616a03c22764ba4ea79e12e3e28
msg327942 - (view) Author: miss-islington (miss-islington) Date: 2018-10-18 07:17
New changeset 5b9b9353de502853b42a20d950ad0ac1fadd05ea by Miss Islington (bot) in branch '3.7':
bpo-35008: Fix possible leaks in Element.__setstate__(). (GH-9924)
https://github.com/python/cpython/commit/5b9b9353de502853b42a20d950ad0ac1fadd05ea
History
Date User Action Args
2022-04-11 14:59:07adminsetgithub: 79189
2018-10-18 09:33:45serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-10-18 07:17:19miss-islingtonsetmessages: + msg327942
2018-10-18 07:16:45miss-islingtonsetnosy: + miss-islington
messages: + msg327941
2018-10-18 06:50:20miss-islingtonsetpull_requests: + pull_request9294
2018-10-18 06:50:12miss-islingtonsetpull_requests: + pull_request9293
2018-10-18 06:49:59serhiy.storchakasetmessages: + msg327937
2018-10-17 08:57:56serhiy.storchakasetnosy: + scoder, eli.bendersky
2018-10-17 08:57:18serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request9277
2018-10-17 08:46:01serhiy.storchakacreate